<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.mars</groupId>
    <artifactId>qraft</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Qraft Framework</name>
    <description>Transfer-free core framework with Raft consensus and distributed state primitives</description>

    <modules>
        <module>qraft-raft-engine</module>
        <module>qraft-distributed-state</module>
        <module>qraft-core</module>
        <module>qraft-agent</module>
        <module>qraft-tenant</module>
        <module>qraft-controller</module>
    </modules>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.14.3</junit.version>
        <testcontainers.version>2.0.3</testcontainers.version>
        <jacoco.version>0.8.13</jacoco.version>
        <raftlog.version>1.1.0</raftlog.version>
        <required.java.version>[25,)</required.java.version>
        <!-- Shared timestamp for consolidated test log file across all modules -->
        <maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
        <test.log.directory>${maven.multiModuleProjectDirectory}/test-logs</test.log.directory>
        <test.log.configuration>${maven.multiModuleProjectDirectory}/config/logback-test.xml</test.log.configuration>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Testing dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            
            <!-- RaftLog WAL - default storage implementation -->
            <dependency>
                <groupId>io.github.mraysmit</groupId>
                <artifactId>raftlog-core</artifactId>
                <version>${raftlog.version}</version>
            </dependency>

            <!-- OpenTelemetry BOM -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>1.59.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- OpenTelemetry Instrumentation BOM (for logback appender, etc.) -->
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
                <version>2.14.0-alpha</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.2</version>
                    <configuration>
                        <systemPropertyVariables>
                            <!-- Shared across all modules so logback writes to one consolidated file -->
                            <testRunTimestamp>${maven.build.timestamp}</testRunTimestamp>
                            <qraft.test.log.dir>${test.log.directory}</qraft.test.log.dir>
                            <logback.configurationFile>${test.log.configuration}</logback.configurationFile>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>${required.java.version}</version>
                                    <message>Qraft requires JDK 25 or newer. Point Maven and the IDE test runtime at your openjdk-25 installation.</message>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- JaCoCo for code coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <!-- Exclude JDK internal classes that cause instrumentation errors.
                         com/sun/** and org/jcp/** are JDK-shipped classes that JaCoCo's
                         runtime agent tries to instrument when the JVM loads them. -->
                    <excludes>
                        <exclude>sun/**</exclude>
                        <exclude>jdk/**</exclude>
                        <exclude>java/**</exclude>
                        <exclude>com/sun/**</exclude>
                        <exclude>org/jcp/**</exclude>
                        <exclude>dev/mars/qraft/controller/**/grpc/**</exclude>
                        <exclude>dev/mars/qraft/controller/QraftControllerApplication*</exclude>
                        <exclude>dev/mars/qraft/controller/QraftControllerService*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>PACKAGE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.60</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
